<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name">联合商家</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ok">确认</string>
    <string name="reset">重置</string>
    <string name="complete">完成</string>
    <string name="finish">终止</string>
    <string name="cancel">取消</string>
    <string name="delete">删除</string>
    <string name="alert">通知</string>
    <string name="more">展开</string>
    <string name="hide">收起</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="msg_delete">确定要删除吗</string>
    <string name="sure">确定</string>
    <string name="skip">跳过</string>
    <string name="icon_01">网上商城</string>
    <string name="icon_02">奢厨餐厅</string>
    <string name="icon_03">奢厨生鲜</string>
    <string name="icon_04">酒店</string>
    <string name="icon_05">我的钱包</string>
    <string name="icon_06">停车</string>
    <string name="icon_07">龙聊</string>
    <string name="icon_08">狂乐传媒</string>
    <string name="sm_name">奢厨</string>
    <string name="toolbar_mycrazymedia">我的狂乐</string>
    <string name="toolbar_vote">投票活动</string>
    <string name="toolbar_selfticket">自助购票</string>
    <string name="toolbar_onlinevedio">在线视频</string>
    <string name="toolbar_highlights">精彩推荐</string>
    <string name="cm_voteaction">投票活动</string>
    <string name="cm_movie">在线视频</string>
    <string name="cm_more">更多</string>
    <string name="cm_mediapromote">视频推荐</string>
    <string name="servings">/份</string>
    <string name="msg_must_login">请登陆后使用</string>
    <string name="sm_my_order">我的订单</string>
    <string name="sm_cheatpoints">赚积分</string>
    <string name="sm_coupon">优惠券</string>
    <string name="sm_favorites">收藏夹</string>
    <string name="sm_incharge">充值</string>
    <string name="sm_qr">扫一扫</string>
    <string name="sm_custom_service">在线客服</string>
    <string name="sm_address">收货地址</string>
    <string name="sm_most_fresh">最新鲜</string>
    <string name="sm_detail_1">好东西何须去远方</string>
    <string name="sm_detail_2">人气生鲜</string>
    <string name="sm_detail_3">让大伙替你选</string>
    <string name="sm_detail_4">今日特惠</string>
    <string name="sm_detail_5">每日精选</string>
    <string name="sm_newgoods">新品尝鲜</string>
    <string name="sm_limited_buying">限量抢购</string>
    <string name="sm_everybody_want_buy">大家都喜欢买</string>
    <string name="sm_homepage">首页</string>
    <string name="sm_store">附近商家</string>
    <string name="sm_activity">活动</string>
    <string name="sm_classify">分类</string>
    <string name="sm_shoppingcart">购物车</string>
    <string name="sm_mine">我的</string>
    <string name="msg_ready_to_service">服务准备中.</string>
    <string name="title_finish">终止</string>
    <string name="msg_finish_app">要终止吗？</string>
    <string name="sm_text_amount">购买数量</string>
    <string name="sm_text_sold">已售：</string>
    <string name="sm_text_timelimited_1">限时配送</string>
    <string name="sm_text_timelimited_2">24小时退\换货</string>
    <string name="sm_text_timelimited_3">自提免运费</string>
    <string name="sm_text_exchange">换购：</string>
    <string name="sm_text_service">客服</string>
    <string name="sm_text_collection">收藏</string>
    <string name="sm_text_my_collection">我的收藏夹</string>
    <string name="sm_text_storage">储存方式：</string>
    <string name="sm_text_good_code">商品编号：</string>
    <string name="sm_text_add_to_shoppingcart">加入购物车</string>
    <string name="sm_text_to_buy">立即购买</string>
    <string name="sm_text_all_evalute">全部评价</string>
    <string name="sm_text_well_evalute">好评</string>
    <string name="sm_text_normal_evalute">中评</string>
    <string name="sm_text_bad_evalute">差评</string>
    <string name="sm_text_img_evalute">晒图</string>
    <string name="sm_text_to_evalute">发表评价</string>
    <string name="sm_text_evaluate">评价</string>
    <string name="sm_text_chang_evaluate">修改评价</string>
    <string name="sm_text_score">评分</string>
    <string name="sm_text_hint_evalute">写下购物体会帮助其他小伙伴～</string>
    <string name="sm_text_to_evaluting">立即发表</string>
    <string name="sm_text_to_select">全选</string>
    <string name="sm_text_totoal">总计:</string>
    <string name="sm_text_delete">删除</string>
    <string name="sm_text_add_favorate">加入收藏</string>
    <string name="sm_text_edit">编辑</string>
    <string name="sm_text_confirm_order">确认订单</string>
    <string name="sm_text_receiver">收货人</string>
    <string name="sm_text_good_classify">商品清单</string>
    <string name="sm_text_good_number">购买数量</string>
    <string name="sm_text_good_time">选择时间</string>
    <string name="sm_text_pay_way">支付方式</string>
    <string name="sm_text_pay_way_yucheng">宇成支付</string>
    <string name="sm_text_pay_way_wechat">微信支付</string>
    <string name="sm_text_pay_way_alipay">支付宝</string>
    <string name="sm_text_pay_way_unionpay">银行卡支付</string>
    <string name="sm_text_balance">账户余额:</string>
    <string name="sm_text_incharge">立即充值</string>
    <string name="sm_text_totoal_money">总金额</string>
    <string name="sm_text_commit_order">提交订单</string>
    <string name="sm_text_plz_choosegoods">您还没选择商品</string>
    <string name="sm_text_serch">搜索</string>
    <string name="sm_text_tips">提示</string>
    <string name="sm_text_nomoney">余额不足</string>
    <string name="sm_text_tocharge">去充值</string>
    <string name="sm_text_addressdetail">您还没有设置收获地址，请设置收获地址</string>
    <string name="sm_text_plz_choose_good">请选择商品</string>
    <string name="sm_text_receive_time">取货时间:</string>
    <string name="sm_text_tomorrow">明天</string>
    <string name="sm_text_tomorrowafter">后天</string>
    <string name="sm_text_tomorrowafter_after">大后天</string>
    <string name="sm_text_time_rule">23:59钱下单，次日可送达</string>
    <string name="sm_text_morning">上午    9:30--12:00</string>
    <string name="sm_text_afternoon">下午    16:00--19:00</string>
    <string name="sm_text_address">收货地址</string>
    <string name="sm_text_my_station">自提站点</string>
    <string name="sm_text_default">设置默认</string>
    <string name="sm_text_add_address">新增地址</string>
    <string name="sm_text_address_detail">自提站点：配送到宇成站点，生鲜商品存放于保鲜柜</string>
    <string name="sm_text_mycity">当前城市：</string>
    <string name="sm_text_changsha">长沙</string>
    <string name="sm_text_phone">联系电话</string>
    <string name="sm_text_set_default">设置默认</string>
    <string name="sm_text_district">所在地区</string>
    <string name="sm_text_plz_choose">请您选择</string>
    <string name="sm_text_address_detail1">详细地址</string>
    <string name="plz_input">请输入</string>
    <string name="sm_text_save_address">保存地址</string>
    <string name="sm_text_select_city">选择城市</string>
    <string name="sm_text_else">其他</string>
    <string name="sm_text_confirm">确定</string>
    <string name="sm_text_history">历史搜索</string>
    <string name="sm_text_sort">综合排序</string>
    <string name="sm_text_sale_number">销量优先</string>
    <string name="plz_fill_text">信息不完整</string>
    <string name="sm_text_nogoods">抱歉，没有找到商品</string>
    <string name="sm_text_returnrule">退货规则</string>
    <string name="all">全部</string>
    <string name="no_pay">待付款</string>
    <string name="no_send">待发货</string>
    <string name="wait_pick">待自提</string>
    <string name="no_sign">待收货</string>
    <string name="no_evaluate">待评价</string>
    <string name="order_bewrite1">共</string>
    <string name="order_bewrite2">件商品，总计：</string>
    <string name="no_order">抱歉，没有相关订单</string>
    <string name="sm_coupon1">奢厨优惠券</string>
    <string name="sm_coupon_usable">可用优惠券</string>
    <string name="sm_coupon_disable">不可用优惠券</string>
    <string name="sm_deadline">使用期限</string>
    <string name="sm_use">使用</string>
    <string name="my_points">我的积分</string>
    <string name="all_points">全部明细</string>
    <string name="cheat_points">收入明细</string>
    <string name="cost_points">支出明细</string>
    <string name="points">积分</string>
    <string name="points_detail">小积分大用途，每日签到和订单评价获取更多积分</string>
    <string name="coupon">优惠券</string>
    <string name="my_evaluate">我的评价</string>
    <string name="my_sugesst">建议反馈</string>
    <string name="about_us">关于我们</string>
    <string name="back_payment">退货/退款</string>
    <string name="back_payment_detail">退货详情</string>
    <string name="back_payment_code">退货编号: </string>
    <string name="back_payment_time">申请退货时间: </string>
    <string name="back_payment_classify">退货类型: </string>
    <string name="back_payment_status">退货状态: </string>
    <string name="back_payment_money">退还金额: </string>
    <string name="check_logistics">查看物流</string>
    <string name="logistics_state">物流状态</string>
    <string name="logistics_code">运单编号</string>
    <string name="logistics_count">货物数量</string>
    <string name="logistics_detail">物流详情</string>
    <string name="success">收货成功</string>
    <string name="order_detail">订单详情</string>
    <string name="order_code">订单号</string>
    <string name="pay_ment">支付方式</string>
    <string name="send_time">配送时间</string>
    <string name="order_money">订单总额</string>
    <string name="freight">快递费</string>
    <string name="good_freight">+运费</string>
    <string name="good_coupon">-商品优惠</string>
    <string name="good_point">-积分</string>
    <string name="freight1">配送方式</string>
    <string name="pay_money">实付款</string>
    <string name="call_service">联系客服</string>
    <string name="confirm_pick">确认收货</string>
    <string name="money">元</string>
    <string name="cancel_order">取消订单</string>
    <string name="sm_ver">生鲜奢厨版本v</string>
    <string name="payment">付款</string>
    <string name="payment_again">再次购买</string>
    <string name="cancel_back">取消</string>
    <string name="order_detail_intro">请在订单提交后尽快完成支付，超时订单将自动取消</string>
    <string name="best_fresh_detail">人说好</string>
    <string name="best_fresh">最新鲜</string>
    <string name="today_fresh">今日特惠</string>
    <string name="hot_fresh">人气生鲜</string>
    <string name="new_fresh">新品尝鲜</string>
    <string name="right_to_buy">立即抢购</string>
    <string name="sm_classify_child">分类列表</string>
    <string name="sm_classify_list">商品列表</string>
    <string name="sm_classify_hot">热卖</string>
    <string name="sm_classify_new">最新</string>
    <string name="sm_classify_sold">销量</string>
    <string name="sm_classify_price">价格</string>
    <string name="apply_to_return">申请退换货</string>
    <string name="return_good_money">退货/退款</string>
    <string name="return_change_good">换货</string>
    <string name="return_money">退款</string>
    <string name="return_send_money">退运费</string>
    <string name="return_send_money_detail">商品原因，请输入退款原因</string>
    <string name="reason_to_retrun">退款原因</string>
    <string name="plz_choose_reason">请选择退款原因</string>
    <string name="money_to_return">退款金额</string>
    <string name="detail_to_return">退款说明</string>
    <string name="plz_detail_to_return">请输入退款说明</string>
    <string name="upload_three_pic">上传照片最多三张</string>
    <string name="plz_input_more">请填入完整信息</string>
    <string name="confirm_commit">确认提交</string>
    <string name="change_address">编辑地址</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="common1_text008">照相</string>
    <string name="common1_text009">本地获取</string>
    <string name="infoadd">店铺地址</string>
    <string name="dateall">营业额(元)</string>
    <string name="dateallnum">总订单(单)</string>
    <string name="dateback">退款额(元)</string>
    <string name="datebacknum">退款订单(单)</string>
    <string name="daydate">今日数据</string>
    <string name="dayorder">今日订单</string>
    <string name="location_no">邮编</string>
    <string name="detail_location">详细地址</string>
    <string name="location_name">地址</string>
    <string name="edit_change">编辑修改</string>
    <string name="choose_location">选择地址</string>
    <string name="search_location">搜索地址</string>
    <string name="total_search1">共搜索出</string>
    <string name="total_search2">个结果</string>
</resources>