<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:padding="@dimen/marginx3"
    android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/navigation_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="@dimen/marginx3">

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/choose_location"
            android:textColor="@color/textcolor_black"
            android:textSize="18sp"
            android:textStyle="bold" />
        <ImageView
            android:id="@+id/title_edit_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/icon_close_tc"
            />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="15dp"
        android:orientation="horizontal">
        <EditText
            android:id="@+id/search_location"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@drawable/edit_stroke_common"
            android:hint="@string/search_location"
            android:textSize="15sp" />
        <Button
            android:id="@+id/button_get"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:background="@drawable/shape_corner_green2_3dp"
            android:text="@string/sm_text_serch"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/textcolor_dp_999"/>
    <LinearLayout
        android:id="@+id/item_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:paddingTop="@dimen/marginx3"
        android:paddingBottom="@dimen/marginx3">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_search1"
            android:textColor="@color/textcolor_black"
            android:layout_marginRight="3dp"
            android:textSize="15sp"/>
        <TextView
            android:id="@+id/result_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/theme_green"
            android:textSize="15sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_search2"
            android:layout_marginLeft="3dp"
            android:textColor="@color/textcolor_black"
            android:textSize="15sp"/>
    </LinearLayout>
    <android.support.v7.widget.RecyclerView
        android:id="@+id/poprecycler_view"
        android:layout_width="match_parent"
        android:layout_height="300dp">

    </android.support.v7.widget.RecyclerView>

</LinearLayout>