<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/camera_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="@dimen/marginx2" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/common1_text008"
            android:textColor="@color/mainblue001" 
            android:textSize="@dimen/text_size_m"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/common_bg" />

    <LinearLayout
        android:id="@+id/local_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:padding="@dimen/marginx2" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/common1_text009"
            android:textColor="@color/mainblue001"
            android:textSize="@dimen/text_size_m" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@color/common_bg" />

    <LinearLayout
        android:id="@+id/close_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffffff"
        android:orientation="horizontal"
        android:padding="@dimen/marginx2" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/black" 
            android:textSize="@dimen/text_size_m"/>
    </LinearLayout>

</LinearLayout>