<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/location_change"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical"
    tools:context=".activity.xsgr.LocationChangeActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:id="@+id/navigation_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:padding="@dimen/marginx2">

            <LinearLayout
                android:id="@+id/close_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingBottom="@dimen/margin"
                android:paddingRight="@dimen/marginx4"
                android:paddingTop="@dimen/margin">

                <ImageView
                    android:id="@+id/branch_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/icon_back" />
            </LinearLayout>

            <TextView
                android:id="@+id/title_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/infoadd"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/title_edit_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/edit_change"
                android:textColor="@android:color/black"
                android:textSize="14sp" />

        </RelativeLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/greywhite2" />


    <RelativeLayout
        android:id="@+id/tv_location_no"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white">


        <TextView
            android:id="@+id/youbian"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/location_no"
            android:textColor="@color/textblack"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/youbian"
            android:textColor="@color/textblack"
            android:textSize="15sp" />


        <ImageView
            android:id="@+id/img_more3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_list_arrow"
            android:visibility="invisible" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/greywhite2" />


    <RelativeLayout
        android:id="@+id/layout_location_name"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:background="@color/white">


        <TextView
            android:id="@+id/dizhi"
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/location_name"
            android:textColor="@color/textblack"
            android:textSize="15sp" />


        <TextView
            android:id="@+id/location_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="10dp"
            android:layout_toRightOf="@+id/dizhi"
            android:textColor="@color/textblack"
            android:textSize="15sp" />


        <ImageView
            android:id="@+id/img_more2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:src="@drawable/icon_list_arrow"
            android:visibility="invisible" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/greywhite2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <TextView
            android:layout_width="70dp"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:text="@string/detail_location"
            android:textColor="@color/textblack"
            android:textSize="15sp" />

        <EditText
            android:id="@+id/edt_location_text"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_marginLeft="6dp"
            android:layout_marginRight="6dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/detail_location"
            android:minLines="2"
            android:padding="@dimen/marginx2"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/sp_14" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/white" />

    <TextView
        android:id="@+id/save_up"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/theme_green"
        android:gravity="center"
        android:text="@string/sm_text_save_address"
        android:textColor="@color/white"
        android:textSize="@dimen/text_size_mb"
        android:textStyle="bold" />
</LinearLayout>